# jsonl-viewer

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  release-please-config.json  svelte.config.js
.github/workflows/: release-please.yml  release.yml
.serena/: project.yml
.serena/memories/: PLAN.md  ai_context.md
docs/: FILEVIEWER_ANALYSIS.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  file_parser.rs  mod.rs  network.rs  search.rs  sort.rs
src/lib/: types.ts
src/lib/components/: DetailPanel.svelte  ExportButton.svelte  FileViewer.svelte  Header.svelte  JsonLine.svelte  SearchBar.svelte  StatsDialog.svelte  StatusBar.svelte  Toast.svelte  UrlDialog.svelte  VirtualList.svelte
src/lib/components/json-tree/: JsonTree.svelte  JsonTreeNode.svelte
src/lib/components/ui/: button.svelte  spinner.svelte
src/lib/stores/: fileStore.ts  searchStore.ts  sortStore.ts  themeStore.ts  toastStore.ts
src/lib/utils/: valueFormat.ts
src/routes/: +layout.svelte  +page.svelte
