[package]
name = "jsonl-viewer"
version = "0.3.0"
description = "A JSON-L viewer app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
calamine = "0.24"
regex = "1.10"
rust_xlsxwriter = "0.63.0"
reqwest = { version = "0.11", features = ["stream"] }
uuid = { version = "1.0", features = ["v4"] }
jsonpath-rust = "0.5"

[lib]
name = "jsonl_viewer_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "jsonl-viewer"
path = "src/main.rs"
